Changes for Oryol header cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ fips_ide_group("Oryol")
 fips_import_oryol_Core()
 fips_import_oryol_Gfx()
 fips_import_oryol_IO()
-fips_import_oryol_HTTP()
+fips_import_oryol_HttpFS()
 fips_import_oryol_Input()
 fips_import_oryol_imgui_IMUI()
 fips_import_oryol_Resource()
