--- a/fips.yml
+++ b/fips.yml
@@ -11,6 +11,8 @@ imports:
         git: https://github.com/floooh/oryol-imgui.git
     fips-soloud:
         git: https://github.com/floooh/fips-soloud.git
+    chips:
+        git: https://github.com/floooh/chips.git
 
 exports:
     header-dirs:
