start with CPC rewrite

--- a/src/yakc/CMakeLists.txt
+++ b/src/yakc/CMakeLists.txt
@@ -25,7 +25,7 @@ fips_begin_module(yakc)
         z1013.h z1013.cc
         z9001.h z9001.cc
         zx.h zx.cc
-#        cpc.h cpc.cc
+        cpc.h cpc.cc
 #        cpc_video.h cpc_video.cc
 #        bbcmicro.h bbcmicro.cc
 #        bbcmicro_video.h bbcmicro_video.cc
