CPC: started with a gate array debugging window

--- a/src/yakc_ui/CMakeLists.txt
+++ b/src/yakc_ui/CMakeLists.txt
@@ -27,6 +27,7 @@ fips_begin_module(yakc_ui)
         I8255Window.cc I8255Window.h
         MOS6522Window.cc MOS6522Window.h
         TapeDeckWindow.cc TapeDeckWindow.h
+        CPCGateArrayWindow.cc CPCGateArrayWindow.h
     )
     fips_deps(IMUI yakc yakc_oryol soloud)
 fips_end_module()
