--- a/fips-configs/yakc-emsc-make-release.yml
+++ b/fips-configs/yakc-emsc-make-release.yml
@@ -7,3 +7,4 @@ cmake-toolchain: emscripten.toolchain.cmake
 defines:
     FIPS_NO_ASSERTS_IN_RELEASE: ON
     FIPS_EMSCRIPTEN_MEM_INIT_METHOD: 0
+    FIPS_EMSCRIPTEN_USE_CWRAP: ON
