--- a/fips-configs/yakc-wasm-make-release.yml
+++ b/fips-configs/yakc-wasm-make-release.yml
@@ -8,3 +8,4 @@ defines:
     FIPS_EMSCRIPTEN_USE_WASM: ON
     FIPS_NO_ASSERTS_IN_RELEASE: ON
     FIPS_EMSCRIPTEN_MEM_INIT_METHOD: 0    
+    FIPS_EMSCRIPTEN_USE_CWRAP: ON
