--- a/fips.yml
+++ b/fips.yml
@@ -8,9 +8,9 @@ imports:
     oryol:
         git: https://github.com/floooh/oryol.git
     oryol-imgui:
-        git: https://github.com/floooh/oryol-imgui.git
+        git: https://github.com/fips-libs/oryol-imgui.git
     fips-soloud:
-        git: https://github.com/floooh/fips-soloud.git
+        git: https://github.com/fips-libs/fips-soloud.git
     chips:
         git: https://github.com/floooh/chips.git
 
