Fixes for Oryol sokol-gfx changes

--- a/src/yakc_oryol/CMakeLists.txt
+++ b/src/yakc_oryol/CMakeLists.txt
@@ -6,6 +6,6 @@ fips_begin_lib(yakc_oryol)
         Keyboard.h Keyboard.cc
         FileLoader.h FileLoader.cc
     )
-    oryol_shader(yakc_shaders.shd)
+    oryol_shader(yakc_shader.glsl)
     fips_deps(Gfx HttpFS Input Assets soloud yakc)
 fips_end_lib()
